kubernetes/external-secrets-operator/components/openshift/egress-firewall.yaml
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: external-secrets-operator
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        dnsName: registry.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: vault.arthurvardevanyan.com

    - type: Allow
      to:
        cidrSelector: 10.101.10.5/32 # OKD WildCard

    - type: Allow
      to:
        cidrSelector: 10.101.10.7/32 # APP WildCard
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
